# sqlecto

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yaml
sqlecto/: converter.py  main.py  utils.py
tests/: test_converter.py  test_main.py  test_utils.py
